[gd_scene load_steps=87 format=3 uid="uid://c634s03bgyt74"]

[ext_resource type="Script" uid="uid://d188fgn3h2s2o" path="res://Scripts/Enemy.gd" id="1_kpr8r"]
[ext_resource type="Texture2D" uid="uid://cy3gp0r2jdlxp" path="res://Assets/Mobs/Cactus/Cactus Front Sheet.png" id="2_kpr8r"]
[ext_resource type="Texture2D" uid="uid://wqxvh25s02bl" path="res://Assets/Mobs/Cactus/Cactus Side Sheet.png" id="3_1exfc"]
[ext_resource type="Texture2D" uid="uid://b25ut75nqnjnc" path="res://Assets/Mobs/Cactus/Cactus Back Sheet.png" id="4_mo1ky"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6bs3c"]
atlas = ExtResource("2_kpr8r")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_uoxpr"]
atlas = ExtResource("2_kpr8r")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_idouy"]
atlas = ExtResource("2_kpr8r")
region = Rect2(80, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0o0ue"]
atlas = ExtResource("2_kpr8r")
region = Rect2(120, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6s1gy"]
atlas = ExtResource("2_kpr8r")
region = Rect2(160, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_uihya"]
atlas = ExtResource("2_kpr8r")
region = Rect2(200, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_27ry8"]
atlas = ExtResource("2_kpr8r")
region = Rect2(240, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_esfq3"]
atlas = ExtResource("2_kpr8r")
region = Rect2(280, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_qlal6"]
atlas = ExtResource("2_kpr8r")
region = Rect2(320, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dascy"]
atlas = ExtResource("2_kpr8r")
region = Rect2(360, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rm7px"]
atlas = ExtResource("2_kpr8r")
region = Rect2(400, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5yix0"]
atlas = ExtResource("3_1exfc")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_imorw"]
atlas = ExtResource("3_1exfc")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vprv"]
atlas = ExtResource("3_1exfc")
region = Rect2(80, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ovthj"]
atlas = ExtResource("3_1exfc")
region = Rect2(120, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_l2hgq"]
atlas = ExtResource("3_1exfc")
region = Rect2(160, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1vdrv"]
atlas = ExtResource("3_1exfc")
region = Rect2(200, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5sdbb"]
atlas = ExtResource("3_1exfc")
region = Rect2(240, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hfgpu"]
atlas = ExtResource("3_1exfc")
region = Rect2(280, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xju7k"]
atlas = ExtResource("3_1exfc")
region = Rect2(320, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_c8a7u"]
atlas = ExtResource("3_1exfc")
region = Rect2(360, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_tivof"]
atlas = ExtResource("3_1exfc")
region = Rect2(400, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ysecm"]
atlas = ExtResource("4_mo1ky")
region = Rect2(0, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bly65"]
atlas = ExtResource("4_mo1ky")
region = Rect2(40, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_cjbcs"]
atlas = ExtResource("4_mo1ky")
region = Rect2(80, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_26boc"]
atlas = ExtResource("4_mo1ky")
region = Rect2(120, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_q1bo7"]
atlas = ExtResource("4_mo1ky")
region = Rect2(160, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_hp3pd"]
atlas = ExtResource("4_mo1ky")
region = Rect2(200, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_04nij"]
atlas = ExtResource("4_mo1ky")
region = Rect2(240, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dkrmf"]
atlas = ExtResource("4_mo1ky")
region = Rect2(280, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ntwgn"]
atlas = ExtResource("4_mo1ky")
region = Rect2(320, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_doij8"]
atlas = ExtResource("4_mo1ky")
region = Rect2(360, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jef4d"]
atlas = ExtResource("4_mo1ky")
region = Rect2(400, 80, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_5taui"]
atlas = ExtResource("3_1exfc")
region = Rect2(0, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rib3w"]
atlas = ExtResource("2_kpr8r")
region = Rect2(0, 120, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_jlf7l"]
atlas = ExtResource("2_kpr8r")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kkmta"]
atlas = ExtResource("2_kpr8r")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrraa"]
atlas = ExtResource("2_kpr8r")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_j1qmk"]
atlas = ExtResource("2_kpr8r")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_2r2pf"]
atlas = ExtResource("3_1exfc")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_veiab"]
atlas = ExtResource("3_1exfc")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_bm8ta"]
atlas = ExtResource("3_1exfc")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_c7vjo"]
atlas = ExtResource("3_1exfc")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_cwafq"]
atlas = ExtResource("4_mo1ky")
region = Rect2(0, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_gopdq"]
atlas = ExtResource("4_mo1ky")
region = Rect2(40, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_cno1d"]
atlas = ExtResource("4_mo1ky")
region = Rect2(80, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0yfvf"]
atlas = ExtResource("4_mo1ky")
region = Rect2(120, 0, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_62jqb"]
atlas = ExtResource("2_kpr8r")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_oh623"]
atlas = ExtResource("2_kpr8r")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_dvjss"]
atlas = ExtResource("2_kpr8r")
region = Rect2(80, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8a5qp"]
atlas = ExtResource("2_kpr8r")
region = Rect2(120, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_er4rj"]
atlas = ExtResource("2_kpr8r")
region = Rect2(160, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnida"]
atlas = ExtResource("2_kpr8r")
region = Rect2(200, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_rd5e4"]
atlas = ExtResource("2_kpr8r")
region = Rect2(240, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8g02r"]
atlas = ExtResource("2_kpr8r")
region = Rect2(280, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_x87i4"]
atlas = ExtResource("2_kpr8r")
region = Rect2(320, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_upvep"]
atlas = ExtResource("2_kpr8r")
region = Rect2(360, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_xosj1"]
atlas = ExtResource("3_1exfc")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_ravfn"]
atlas = ExtResource("3_1exfc")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_sc8lj"]
atlas = ExtResource("3_1exfc")
region = Rect2(80, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_a5wyl"]
atlas = ExtResource("3_1exfc")
region = Rect2(120, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_1yp63"]
atlas = ExtResource("3_1exfc")
region = Rect2(160, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_6c7m4"]
atlas = ExtResource("3_1exfc")
region = Rect2(200, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_r4hc8"]
atlas = ExtResource("3_1exfc")
region = Rect2(240, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_umsle"]
atlas = ExtResource("3_1exfc")
region = Rect2(280, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_0wn7q"]
atlas = ExtResource("3_1exfc")
region = Rect2(320, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_n05hl"]
atlas = ExtResource("4_mo1ky")
region = Rect2(0, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_318ex"]
atlas = ExtResource("4_mo1ky")
region = Rect2(40, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_54k7x"]
atlas = ExtResource("4_mo1ky")
region = Rect2(80, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_wb3kq"]
atlas = ExtResource("4_mo1ky")
region = Rect2(120, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_kec1a"]
atlas = ExtResource("4_mo1ky")
region = Rect2(160, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_c10jr"]
atlas = ExtResource("4_mo1ky")
region = Rect2(200, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ax1t"]
atlas = ExtResource("4_mo1ky")
region = Rect2(240, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_i0krw"]
atlas = ExtResource("4_mo1ky")
region = Rect2(280, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfsd3"]
atlas = ExtResource("4_mo1ky")
region = Rect2(320, 40, 40, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_f34u8"]
atlas = ExtResource("4_mo1ky")
region = Rect2(360, 40, 40, 40)

[sub_resource type="SpriteFrames" id="SpriteFrames_ukyrk"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6bs3c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uoxpr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_idouy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0o0ue")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6s1gy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uihya")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_27ry8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esfq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qlal6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dascy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rm7px")
}],
"loop": false,
"name": &"attack_down",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5yix0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_imorw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vprv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ovthj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l2hgq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1vdrv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5sdbb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hfgpu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xju7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c8a7u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tivof")
}],
"loop": false,
"name": &"attack_side",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ysecm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bly65")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cjbcs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_26boc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q1bo7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hp3pd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04nij")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dkrmf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ntwgn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_doij8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jef4d")
}],
"loop": false,
"name": &"attack_up",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5taui")
}],
"loop": false,
"name": &"damage",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rib3w")
}],
"loop": false,
"name": &"death",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jlf7l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kkmta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrraa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j1qmk")
}],
"loop": true,
"name": &"idle_down",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2r2pf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_veiab")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bm8ta")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c7vjo")
}],
"loop": true,
"name": &"idle_side",
"speed": 4.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cwafq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gopdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cno1d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0yfvf")
}],
"loop": true,
"name": &"idle_up",
"speed": 6.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_62jqb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_oh623")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dvjss")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8a5qp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_er4rj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnida")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rd5e4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8g02r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x87i4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_upvep")
}],
"loop": true,
"name": &"walk_down",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xosj1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ravfn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sc8lj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a5wyl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1yp63")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6c7m4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r4hc8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_umsle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0wn7q")
}],
"loop": true,
"name": &"walk_side",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n05hl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_318ex")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_54k7x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wb3kq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kec1a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c10jr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ax1t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i0krw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vfsd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f34u8")
}],
"loop": true,
"name": &"walk_up",
"speed": 10.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_vgqql"]
radius = 6.0
height = 18.0

[sub_resource type="Animation" id="Animation_1exfc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_kpr8r"]
resource_name = "damage"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_o3h8g"]
resource_name = "game_over"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mo1ky"]
_data = {
&"RESET": SubResource("Animation_1exfc"),
&"damage": SubResource("Animation_kpr8r"),
&"game_over": SubResource("Animation_o3h8g")
}

[node name="Enemy" type="CharacterBody2D" groups=["enemy"]]
script = ExtResource("1_kpr8r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ukyrk")
animation = &"damage"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 9)
shape = SubResource("CapsuleShape2D_vgqql")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mo1ky")
}

[node name="RayCast2D" type="RayCast2D" parent="."]

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
